2015-04-06  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/alpha/sysdep.h: Unconditionally include dl-sysdep.h.
	* sysdeps/alpha/fpu/libm-test-ulps: Update.

	* math/test-fenvinline.c (feenable_test): Cast fe_exc to
	unsigned int before printing.

2015-04-03  Rajalakshmi Srinivasaraghavan  <raji@linux.vnet.ibm.com>

	[BZ #17596]
	* wcsmbs/mbrtowc.c (__mbrtowc): Add check for n=0.
	* wcsmbs/mbrtoc16.c (mbrtoc16): Likewise.

2015-04-02  Florian Weimer  <fweimer@redhat.com>

	* include/libc-internal.h (libc_max_align_t): Define.

2015-04-02  Andreas Schwab  <schwab@suse.de>

	[BZ #16850]
	* sysdeps/unix/sysv/linux/aarch64/bits/sigstack.h: New file.

2015-04-02  Mel Gorman  <mgorman@suse.de>

	[BZ #17195]
	* malloc/arena.c (free): Apply trim threshold to per-thread heaps
	as well as the main arena.

2015-03-31  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #18185]
	* sysdeps/x86_64/cacheinfo.c (init_cacheinfo): Limit threads
	sharing L2 cache to 2 for Silvermont/Knights Landing.

2015-03-31  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #17711]
	* config.make.in (have-protected-data): New.
	* configure.ac: Check linker support for protected data symbol.
	* configure: Regenerated.
	* elf/Makefile (modules-names): Add tst-protected1moda and
	tst-protected1modb if $(have-protected-data) is yes.
	(tests): Add tst-protected1a and tst-protected1b if
	$(have-protected-data) is yes.
	($(objpfx)tst-protected1a): New.
	($(objpfx)tst-protected1b): Likewise.
	(tst-protected1modb.so-no-z-defs): Likewise.
	* elf/tst-protected1a.c: New file.
	* elf/tst-protected1b.c: Likewise.
	* elf/tst-protected1mod.h: Likewise.
	* elf/tst-protected1moda.c: Likewise.
	* elf/tst-protected1modb.c: Likewise.

2015-03-31  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #17711]
	* elf/dl-lookup.c (do_lookup_x): When UNDEF_MAP is NULL, which
	indicates it is called from do_lookup_x on relocation against
	protected data, skip the data definion in the executable from
	copy reloc.