@@ -1,3 +1,10 @@
+2015-04-06  Roland McGrath  <roland@hack.frob.com>
+
+	* test-skeleton.c (TIMEOUT): Move #define to top level.
+	(main): Grok environment variable TEST_DIRECT.  If set, print
+	test expectation details into that file and then behave as if
+	given --direct.
+
 2015-04-06  Richard Henderson  <rth@redhat.com>
 
 	* sysdeps/unix/alpha/sysdep.h: Unconditionally include dl-sysdep.h.
